change debug to true

--- a/Website/ezpz/static/ezpz/templates/items.html
+++ b/Website/ezpz/static/ezpz/templates/items.html
@@ -18,8 +18,14 @@
 </div>
 <!-- end error -->
 <hr>
+test test test
+<!-- <video autoplay></video>
+<img src="">
+<canvas style="display:none;"></canvas> -->
+
+
 <!-- goods -->
-<h2 class="text-center">Goods</h2>
+<!-- <h2 class="text-center">Goods</h2>
 
 <table class=table>
 <thead>
@@ -40,17 +46,17 @@
 <td>{{goods.rating}}</td>
 </tr>
 </tbody>
-</table>
+</table> -->
 <!-- <div ng-repeat="goods in goodsData">
 	<div class="panel-body">
 	{{goods.category}} {{goods.name}}
 	</div>
 </div> -->
 <!-- end goods -->
-<hr>
+<!-- <hr> -->
 
 <!-- services -->
-<h2 class="text-center">Services</h2>
+<!-- <h2 class="text-center">Services</h2>
 
 <table class=table>
 <thead>
@@ -73,5 +79,5 @@
 </tbody>
 </table>
 
-<hr>
-<!-- end services -->
+<hr> -->
+<!-- end services
