--- a/Website/ezpz/templates/ezpz/main.html
+++ b/Website/ezpz/templates/ezpz/main.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html lang="en">
 
 <head>
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>EZPZ - Surbana Jurong</title>
+    <title>SmartRank</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'ezpz/css/bootstrap.min.css' %}" rel="stylesheet">
