--- a/Website/ezpz/static/ezpz/templates/items.html
+++ b/Website/ezpz/static/ezpz/templates/items.html
@@ -10,7 +10,7 @@
     </div>
 </header>
 
-<h1 class="text-center">Overall Items</h1>
+<h1 class="text-center">Items</h1>
 
 <!-- error -->
 <div ng-if="errorMessage" class="alert alert-danger">
@@ -18,10 +18,8 @@
 </div>
 <!-- end error -->
 <hr>
-test test test
-<!-- <video autoplay></video>
-<img src="">
-<canvas style="display:none;"></canvas> -->
+
+
 
 
 <!-- goods -->
