--- a/Website/ezpz/static/ezpz/css/main.css
+++ b/Website/ezpz/static/ezpz/css/main.css
@@ -2,3 +2,16 @@
 	height:20px;
 	width:20px;
 }
+
+.center {
+	margin: auto;
+}
+
+.center-div{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}	
