--- a/Website/ezpz/static/ezpz/templates/createServices.html
+++ b/Website/ezpz/static/ezpz/templates/createServices.html
@@ -1,4 +1,4 @@
-<h1 class="text-center">Create Services</h1>
+<h1 class="text-center">Audio</h1>
 <br/>
 
 
@@ -11,7 +11,7 @@
 	<!-- end error message -->
 
 	<!-- create services form -->
-	<form id="create-form" name="create-form">
+<!-- 	<form id="create-form" name="create-form">
 		<input type="text" ng-model="servicesCategory" class="form-control" name="category" placeholder="Category" />
 		<input type="text" ng-model="servicesName" class="form-control" name="name" placeholder="Name" />
 		<input type="text" ng-model="servicesPrice" class="form-control" name="price" placeholder="Price" />
@@ -21,6 +21,14 @@
 
 		<br/>
 		<button class="btn btn-primary btn-lg" ng-click="createServices()" value="submit">Submit</button>
-	</form>
+	</form> -->
 	<!-- end create services form -->
+
+<!-- 	<audio id="player" controls></audio>
+	<a href="#" id="download">Download</a>
+	<button id="stop">Stop</button> -->
+	<button ng-click="startListening()">Start Recording</button>
+	<button ng-click="stopListening()">Stop Recording</button>
+	{{currentSpeech}}
+
 </div>
