--- a/Website/ezpz/templates/ezpz/main.html
+++ b/Website/ezpz/templates/ezpz/main.html
@@ -49,16 +49,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">EZPZ</a>
+                <a class="navbar-brand" href="/">SmartRank</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/createGoods">Create Goods</a>
+                        <a href="/createGoods">Video</a>
                     </li>
                     <li>
-                        <a href="/createServices">Create Services</a>
+                        <a href="/createServices">Audio</a>
                     </li>
                 </ul>
             </div>
