pull image from database

--- a/Website/ezpz/static/ezpz/templates/items.html
+++ b/Website/ezpz/static/ezpz/templates/items.html
@@ -19,7 +19,13 @@
 <!-- end error -->
 <hr>
 
+<h2 class="text-center">Feedback</h2>
+{{feedback}}
 
+<hr>
+
+<h2 class="text-center">Image Feedback</h2>
+{{imageFeedback}}
 
 
 <!-- goods -->
