--- a/Website/ezpz/static/ezpz/templates/createGoods.html
+++ b/Website/ezpz/static/ezpz/templates/createGoods.html
@@ -8,6 +8,9 @@
 	<div ng-if="errorMessage" class="alert alert-danger">
 	  <strong>Error:</strong> {{ errorMessage }}
 	</div>
+	<div ng-if="successMessage" class="alert alert-success">
+	  <strong>Success:</strong> {{ successMessage }}
+	</div>
 	<!-- end error message -->
 </div>
 <div style="display: flex;
