--- a/Website/ezpz/static/ezpz/templates/items.html
+++ b/Website/ezpz/static/ezpz/templates/items.html
@@ -43,7 +43,7 @@
 
 <h2 class="text-center">Image Feedback</h2>
 {{imageFeedback}}
-{{imageFeedback["images"]}}
+<!-- {{imageFeedback.images}} -->
 <table class="table table-striped">
 <thead>
 <tr>
