--- a/Website/ezpz/static/ezpz/templates/items.html
+++ b/Website/ezpz/static/ezpz/templates/items.html
@@ -42,8 +42,6 @@
 <hr>
 
 <h2 class="text-center">Image Feedback</h2>
-{{imageFeedback}}
-<!-- {{imageFeedback.images}} -->
 <table class="table table-striped">
 <thead>
 <tr>
@@ -60,6 +58,12 @@
 </tr>
 </tbody>
 </table>
+
+<div>
+    <a href="https://plot.ly/~nisha004/25/?share_key=dj2qlMQfv6IRNSp9S5GKAG" target="_blank" title="wqejdninoisdna" style="display: block; text-align: center;"><img src="https://plot.ly/~nisha004/25.png?share_key=dj2qlMQfv6IRNSp9S5GKAG" alt="wqejdninoisdna" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+    <script data-plotly="nisha004:25" sharekey-plotly="dj2qlMQfv6IRNSp9S5GKAG" src="https://plot.ly/embed.js" async></script>
+</div>
+
 
 <!-- goods -->
 <!-- <h2 class="text-center">Goods</h2>
