--- a/Website/ezpz/templates/ezpz/main.html
+++ b/Website/ezpz/templates/ezpz/main.html
@@ -60,6 +60,9 @@
                     <li>
                         <a href="/createServices">Audio</a>
                     </li>
+                    <li>
+                        <a href="/analytics">Analytics</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
