--- a/Website/ezpz/templates/ezpz/main.html
+++ b/Website/ezpz/templates/ezpz/main.html
@@ -55,7 +55,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/createGoods">Video</a>
+                        <a href="/createGoods">Image</a>
                     </li>
                     <li>
                         <a href="/createServices">Audio</a>
@@ -94,7 +94,7 @@
     <script src="{% static 'ezpz/js/create-services-controller.js' %}"></script>
     <script src="{% static 'ezpz/js/create-services-service.js' %}"></script>
     <script src="{% static 'ezpz/js/server-service.js' %}"></script>
-
+    <script src="{% static 'ezpz/js/analytics-controller.js' %}"></script>
 </div>
 </body>
 
