--- a/Website/ezpz/static/ezpz/css/business-frontpage.css
+++ b/Website/ezpz/static/ezpz/css/business-frontpage.css
@@ -12,7 +12,7 @@ body {
 
 .business-header {
     height: 400px;
-    background: url('https://gameofsausage.files.wordpress.com/2015/01/photodune-7255751-happy-beauty-woman-texting-on-a-tablet-l.jpg') center center no-repeat scroll;
+    background: url('https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAA2lAAAAJDQ5Y2U3Njg5LWYwOWMtNDIwZC1hOGEwLTI0ZGIxOTgyNWU0Ng.jpg') center center no-repeat scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
