--- a/Website/ezpz/static/ezpz/templates/items.html
+++ b/Website/ezpz/static/ezpz/templates/items.html
@@ -41,6 +41,7 @@
 </table>
 <!-- {{feedback}} -->
 <button class="btn btn-default" ng-click="allocateManpower()">Allocate Manpower</button>
+<button class="btn btn-default" ng-click="respondToLowPriority()">Respond To Low Priority</button>
 <hr>
 
 <h2 class="text-center">Image Feedback</h2>
