--- a/Website/ezpz/static/ezpz/templates/items.html
+++ b/Website/ezpz/static/ezpz/templates/items.html
@@ -39,7 +39,24 @@
         </tr>
     </tbody>
 </table>
-<!-- {{feedback}} -->
+<div class="well" ng-if="lowPriorityFeedback.length>0">
+    <div class="row">
+        <div class="col-md-6">
+            <ul class="list-group">
+                <li class="list-group-item" ng-repeat="feedback in lowPriorityFeedback">{{feedback.feedback}}</li>
+            </ul>
+        </div>
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    Thank you so much for the kind feedback, feel free to contact us at anytime to let us know more about your experience.
+                </div>
+            </div>
+            <button class="btn btn-primary" ng-click="submitLowPriorityResponse()">Submit Response
+            </button>
+        </div>
+    </div>
+</div>
 <button class="btn btn-default" ng-click="allocateManpower()">Allocate Manpower</button>
 <button class="btn btn-default" ng-click="respondToLowPriority()">Respond To Low Priority</button>
 <hr>
