--- a/Website/ezpz/static/ezpz/templates/createServices.html
+++ b/Website/ezpz/static/ezpz/templates/createServices.html
@@ -15,6 +15,7 @@
 	<button class="btn btn-lg btn-default" ng-click="startListening()">Start Recording</button>
 	<button class="btn btn-lg btn-default" ng-click="stopListening()">Stop Recording</button>
 	<br><br>
+	<span ng-if="recording">Say something...</span>
 	<div class="panel panel-default" ng-if="currentSpeech">
 	<div class="panel-body">
 	{{currentSpeech}}
