--- a/Website/ezpz/templates/ezpz/main.html
+++ b/Website/ezpz/templates/ezpz/main.html
@@ -55,10 +55,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/createGoods">Image</a>
+                        <a href="/image">Image</a>
                     </li>
                     <li>
-                        <a href="/createServices">Audio</a>
+                        <a href="/audio">Audio</a>
                     </li>
                     <li>
                         <a href="/analytics">Analytics</a>
